[WIP]: shmem initializing

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -2,12 +2,14 @@
 set(SERVER_SOURCE_DIR src)
 set(SERVER_SOURCES
     ${SERVER_SOURCE_DIR}/hashtable.cc
+    ${SERVER_SOURCE_DIR}/shm.cc
     )
 
 # Headers
 set(SERVER_HEADER_DIR include)
 set(SERVER_HEADERS
     ${SERVER_HEADER_DIR}/hashtable.h
+    ${SERVER_HEADER_DIR}/shm.h
     )
 
 add_library(server STATIC ${SERVER_HEADERS} ${SERVER_SOURCES})
