Fine grained rwlock using hand-over-hand locking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ option(USE_SERVER "Use the Server library" ON)
 option(USE_GOOGLE_TEST "Use GoogleTest for testing" ON)
 
 # Enable or disable to change concurrency policy
-add_compile_definitions(COARSE_GRAINED_LOCKING)
+#add_compile_definitions(COARSE_GRAINED_LOCKING)
+add_compile_definitions(FINE_GRAINED_LOCKING)
 
 # Server project library
 if(USE_SERVER)
