--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 
-project(hashtable_server VERSION 1.0.0)
+project(hashtable VERSION 1.0.0)
 
-configure_file(ServerConfig.h.in ServerConfig.h)
+configure_file(HashTableConfig.h.in HashTableConfig.h)
 
 include(CTest)
 
@@ -16,17 +16,17 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 # Options for libraries
-option(USE_SERVER "Use the Server library" ON)
+option(USE_HASHTABLE "Use the Hash Table library" ON)
 option(USE_GOOGLE_TEST "Use GoogleTest for testing" ON)
 
 # Enable or disable to change concurrency policy
 #add_compile_definitions(COARSE_GRAINED_LOCKING)
 add_compile_definitions(FINE_GRAINED_LOCKING)
 
-# Server project library
-if(USE_SERVER)
-    add_subdirectory(server)
-    list(APPEND EXTRA_LIBS server)
+# HashTable project library
+if(USE_HASHTABLE)
+    add_subdirectory(hashtable)
+    list(APPEND EXTRA_LIBS hashtable)
 endif()
 
 # GoogleTest
@@ -35,11 +35,22 @@ if(USE_GOOGLE_TEST)
 endif()
 
 # Server program
-add_executable(${CMAKE_PROJECT_NAME} main.cc)
+set(SERVER_PROJECT_NAME server)
+add_executable(${SERVER_PROJECT_NAME} server.cc)
 
-target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC ${EXTRA_LIBS})
+target_link_libraries(${SERVER_PROJECT_NAME} PUBLIC ${EXTRA_LIBS})
 
-target_include_directories(${CMAKE_PROJECT_NAME} PUBLIC
+target_include_directories(${SERVER_PROJECT_NAME} PUBLIC
+    "${PROJECT_BINARY_DIR}"
+    )
+
+# Client program
+set(CLIENT_PROJECT_NAME client)
+add_executable(${CLIENT_PROJECT_NAME} client.cc)
+
+target_link_libraries(${CLIENT_PROJECT_NAME} PUBLIC ${EXTRA_LIBS})
+
+target_include_directories(${CLIENT_PROJECT_NAME} PUBLIC
     "${PROJECT_BINARY_DIR}"
     )
 
