Default mode to optimistic locking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,9 @@ option(USE_HASHTABLE "Use the Hash Table library" ON)
 option(USE_GOOGLE_TEST "Use GoogleTest for testing" ON)
 
 # Enable or disable to change concurrency policy
-add_compile_definitions(BUCKET_LOCKING)
+#add_compile_definitions(BUCKET_LOCKING)
 #add_compile_definitions(CHAIN_LOCKING)
+add_compile_definitions(OPTIMISTIC_LOCKING)
 
 # HashTable project library
 if(USE_HASHTABLE)
